sw/qa/extras/rtfexport/rtfexport3.cxx
@@ -16,6 +16,7 @@
 #include <com/sun/star/text/XPageCursor.hpp>
 #include <com/sun/star/text/XTextViewCursorSupplier.hpp>
 #include <com/sun/star/text/XTextColumns.hpp>
+#include <com/sun/star/text/TextContentAnchorType.hpp>
 
 class Test : public SwModelTestBase
 {
@@ -170,6 +171,26 @@ DECLARE_RTFEXPORT_TEST(testTdf117505, "tdf117505.odt")
     // remaining top margin -> header content moved down.
     CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(1499),
                          getProperty<sal_Int32>(xFirstPage, "HeaderHeight"));
+}
+
+DECLARE_RTFEXPORT_TEST(testTdf112520, "tdf112520.docx")
+{
+    if (!mbExported)
+        return;
+
+    // Assert that the white shape is on top of the yellow one.
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(0xffff00),
+                         getProperty<sal_Int32>(getShape(2), "FillColor"));
+    CPPUNIT_ASSERT_EQUAL(text::TextContentAnchorType_AT_CHARACTER,
+                         getProperty<text::TextContentAnchorType>(getShape(2), "AnchorType"));
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(0xffffff),
+                         getProperty<sal_Int32>(getShape(3), "FillColor"));
+    // Without the accompanying fix in place, this test would have failed with
+    // 'expected: 4, actual: 2'.
+    // This means the draw page was 0/at-char/white, 1/at-char/yellow, 2/at-page/white,
+    // instead of the good 0/at-page/white, 1/at-char/yellow, 2/at-char/white.
+    CPPUNIT_ASSERT_EQUAL(text::TextContentAnchorType_AT_CHARACTER,
+                         getProperty<text::TextContentAnchorType>(getShape(3), "AnchorType"));
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
